static/css/nav.css
main> :first-child:not(.fullscreen-image) {
  padding-top: min(24vh, 6rem);
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 100;
}

header nav {
  display: flex;
  align-items: center;
  padding: min(2vh, 0.5rem) 15vw;
}

header nav ul {
  display: flex;
  justify-content: end;
}

header nav li {
  list-style-type: none;
}

header nav a {
  font-family: var(--main-font);
  font-size: 1.2rem;
  padding: 0 min(3vw, 1rem);
  margin: 0;
}

header .nav-shadow {
  box-shadow: 0 2px 8px hsla(0, 0%, 35%, 0.15);
  transition: box-shadow 0.2s;
}

header .nav-no-shadow {
  box-shadow: none;
  transition: box-shadow 0.2s;
}

header.nav-solid {
  background-color: rgba(var(--color-bg-main), 0.85);
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
}

header.nav-solid,
header.nav-solid * {
  color: rgb(var(--color-accent-main));
}

header.nav-transparent,
header.nav-transparent * {
  background-color: transparent;
  color: rgb(var(--color-white));
  text-shadow: 2px 2px 4px rgb(var(--color-black));
}

.nav-transparent #nav-lan {
  border-left: 2px solid #ddd;
}

.nav-solid #nav-lan {
  border-left: 2px solid rgb(var(--color-accent-alt));
}

nav .dropdown {
  overflow: hidden;
}

nav .dropdown-content {
  display: none;
  width: inherit;
  z-index: 1;
  flex-direction: column;
  transition: display 5.5s ease;
  padding-top: min(4vh, 1rem);
  position: absolute;
}

nav .dropdown:hover .dropdown-content {
  display: flex;
  gap: min(1vh, 0.25rem);
}

nav .dropdown .dropdown-content i {
  padding: min(2vw, 0.5rem) min(2vw, 0.5rem);
  box-sizing: unset !important;
}


/* Burger & close */
.nav-burger,
.nav-close {
  font-size: 1.25rem;
  cursor: pointer;
  transition: opacity 0.3s, transform 0.3s;
  display: none;
  pointer-events: none;
}

.nav-icons {
  flex: 2;
}

#nav-menu {
  flex: 6;
}



/* Mobile menu */
@media screen and (max-width: 1550px) {

  #nav-menu,
  #nav-menu * {
    color: rgb(var(--color-black));
    text-shadow: none;
  }

  .nav-close.show {
    display: inline;
    pointer-events: auto;
  }

  .nav-burger.show {
    display: inline;
    pointer-events: auto;
  }

  #nav-menu {
    position: absolute;
    top: min(10.5vh, 5.25rem);
    left: 0;
    width: 100%;
    height: calc(100vh - min(8vh, 4rem));
    background: rgb(var(--color-bg-main));
    overflow-y: auto;
    transform: translateY(-100%);
    opacity: 0;
    pointer-events: none;
    transition: transform 0.3s ease, opacity 0.3s ease;
    padding: 2rem 5vw;
  }

  #nav-menu.show-menu {
    transform: translateY(0);
    opacity: 1;
    pointer-events: auto;
  }

  #nav-menu ul {
    flex-direction: column;
  }

  #nav-menu li {
    margin: 0.5rem 0;
  }

  #nav-menu a {
    display: inline-block;
    width: 100%;
    box-shadow: 0 0 4px #ddd;
    border: 1px solid #ddd;
    padding: min(1vh, 0.5rem) min(3vw, 1rem);
  }

  .nav-icons {
    justify-content: space-between;
    width: 100%;
  }

  .nav-icons i {
    margin: 0;
    padding: 0 min(3vw, 1rem);
  }
}

footer {
  background-color: rgb(var(--color-bg-alt));
  width: 100%;
  z-index: 100;
  display: flex;
  justify-content: center;
  padding: 1vh 0;
}

footer>* {
  text-decoration: none;
  font-family: var(--main-font);
}

